# hydra-auction

./: .gitattributes  .gitignore  .hlint.yaml  HydraAuction.OnChain.uplc181559-1.flat  HydraAuction.OnChain.uplc181559-2.flat  LICENSE  Makefile  README.md  cabal.project  config.json  cspell.config.yaml  docker-compose-testnet.yaml  docker-compose.devnet.yaml  docker-compose.testnet.yaml  docker-compose.yaml  flake.nix  format.sh  fourmolu.yaml  hlint.yaml  hydra-auction.cabal  lint.sh  reset-devnet.sh  seed-devnet.sh  spin-up-new-devnet.sh
.github/: CODEOWNERS
app/: CardanoNodeDevnet.hs  CliActions.hs  CliConfig.hs  CliParsers.hs  DemoFiles.hs  Main.hs  ParseTxIn.hs  ParsingCliHelpers.hs
build-images/: hydra-auction-cli  hydra-auction-delegate  hydra-auction-platform  hydra-node
data/: protocol-parameters.json
delegate-app/: Main.hs
deriving-constructors/: Deriving.hs
doc/: code_architecture.md  contributing.md  design_considerations.md  domain_logic.md  limitations.md  off_chain_spec.md  on_chain_spec.md  spec.md
docs/: CIP_PROPOSAL.md  Gemfile  _config.yml  contributing.md  domain_logic.md  index.markdown  limitations.md  off_chain_spec.md  on_chain_performance.md  on_chain_spec.md  test.md  (+1 more)
hydra-auction-error/: NOTICE  hydra-auction-error.cabal
hydra-auction-error/src/HydraAuction/: Error.hs
hydra-auction-error/src/HydraAuction/Error/Onchain/MintingPolicies/: Auction.hs
hydra-auction-error/src/HydraAuction/Error/Onchain/Validators/: AuctionEscrow.hs  AuctionMetadata.hs  BidderDeposit.hs  FeeEscrow.hs  StandingBid.hs
hydra-auction-error/src/HydraAuction/Error/Types/: AuctionEscrowState.hs  AuctionInfo.hs  AuctionState.hs  AuctionTerms.hs  BidTerms.hs  BidderInfo.hs  DelegateInfo.hs
hydra-auction-offchain/: hydra-auction-offchain.cabal
hydra-auction-offchain/src/Auction/Offchain/: Terms.hs
hydra-auction-offchain/src/Auction/Offchain/Lib/: Crypto.hs
hydra-auction-offchain/src/Auction/Offchain/Types/: AuctionTerms.hs
hydra-auction-offchain/src/HydraAuction/Offchain/Lib/: Crypto.hs  Time.hs  Validation.hs
hydra-auction-offchain/src/HydraAuction/Offchain/Lib/Codec/: Onchain.hs
hydra-auction-offchain/src/HydraAuction/Offchain/Types/: AuctionEscrowState.hs  AuctionInfo.hs  AuctionState.hs  AuctionTerms.hs  BidTerms.hs  BidderInfo.hs  DelegateInfo.hs  StandingBidState.hs
hydra-auction-offchain/src/HydraAuctionOffchain/Contract/Types/: AuctionState.hs  AuctionStateError.hs  AuctionTerms.hs  AuctionTermsError.hs  BidTerms.hs  BidTermsError.hs  BidderInfo.hs  BidderInfoError.hs  DelegateInfo.hs  DelegateInfoError.hs
hydra-auction-offchain/src/HydraAuctionOffchain/Lib/: Crypto.hs  Validation.hs
hydra-auction-offchain/src/HydraAuctionOffchain/Types/: AuctionState.hs  AuctionStateError.hs  AuctionTerms.hs  AuctionTermsError.hs  BidTerms.hs  BidTermsError.hs  BidderInfo.hs  BidderInfoError.hs  DelegateInfo.hs  DelegateInfoError.hs
hydra-auction-onchain/: hydra-auction-onchain.cabal
hydra-auction-onchain/exe/hydra-auction-onchain/: Scripts.hs
hydra-auction-onchain/exe/hydra-auction-onchain/Lib/: Scripts.hs
hydra-auction-onchain/src/Auction/Onchain/: AuctionEscrow.hs  FeeEscrow.hs  Terms.hs
hydra-auction-onchain/src/Auction/Onchain/Types/: AuctionTerms.hs
hydra-auction-onchain/src/HydraAuction/Onchain/: Scripts.hs
hydra-auction-onchain/src/HydraAuction/Onchain/Lib/: Error.hs  PlutusScript.hs  PlutusTx.hs  ScriptContext.hs  Scripts.hs  Serialise.hs
hydra-auction-onchain/src/HydraAuction/Onchain/MintingPolicies/: Auction.hs  AuctionMp.hs  AuctionRedeemer.hs
hydra-auction-onchain/src/HydraAuction/Onchain/Types/: AuctionEscrowState.hs  AuctionInfo.hs  AuctionState.hs  AuctionTerms.hs  BidTerms.hs  BidderInfo.hs  DelegateInfo.hs  Redeemers.hs  Scripts.hs  StandingBidState.hs  Tokens.hs
hydra-auction-onchain/src/HydraAuction/Onchain/Validators/: AuctionEscrow.hs  AuctionMetadata.hs  BidderDeposit.hs  FeeEscrow.hs  StandingBid.hs
hydra-auction-onchain/src/HydraAuctionOnchain/Lib/: Error.hs  Serialise.hs
hydra-auction-onchain/src/HydraAuctionOnchain/Types/: AuctionState.hs  AuctionStateError.hs  AuctionTerms.hs  AuctionTermsError.hs  BidTerms.hs  BidTermsError.hs  BidderInfo.hs  BidderInfoError.hs  DelegateInfo.hs  DelegateInfoError.hs
hydra-auction-plutus/: hydra-auction-plutus.cabal
hydra-auction-plutus/src/: Auction.hs
hydra-auction-plutus/src/Auction/: Terms.hs
hydra-auction-plutus/src/Auction/Onchain/: BidderDeposit.hs  StandingBid.hs  VoucherToken.hs
hydra-auction/error/: hydra-auction-error.cabal
hydra-auction/error/src/HydraAuction/: Error.hs
hydra-auction/error/src/HydraAuction/Error/Onchain/MintingPolicies/: AuctionMp.hs
hydra-auction/error/src/HydraAuction/Error/Onchain/Validators/: AuctionEscrow.hs  FeeEscrow.hs
hydra-auction/error/src/HydraAuction/Error/Types/: AuctionInfo.hs  BidTerms.hs  StandingBidState.hs
hydra-auction/offchain/: hydra-auction-offchain.cabal
hydra-auction/offchain/scripts/HydraAuction/Offchain/: Scripts.hs
hydra-auction/offchain/src/HydraAuction/Offchain/: Lib.hs
hydra-auction/offchain/src/HydraAuction/Offchain/Types/: ScriptInfo.hs  Scripts.hs  Tokens.hs
hydra-auction/onchain/: hydra-auction-onchain.cabal
hydra-auction/onchain/exe/hydra-auction-onchain/: Main.hs  Scripts.hs
hydra-auction/onchain/src-compiled/HydraAuction/Onchain/: Compiled.hs
hydra-auction/onchain/src/HydraAuction/Onchain/Lib/: Compile.hs  Error.hs  PlutusTx.hs  Serialise.hs
hydra-auction/onchain/src/HydraAuction/Onchain/Types/: AuctionInfo.hs  AuctionTerms.hs  BidTerms.hs  BidderInfo.hs  DelegateInfo.hs  StandingBidState.hs  Tokens.hs
hydra-auction/onchain/src/HydraAuction/Onchain/Validators/: AuctionEscrow.hs  AuctionMetadata.hs  BidderDeposit.hs  FeeEscrow.hs  StandingBid.hs
plutus-cardano-api-codec/: plutus-cardano-api-codec.cabal
plutus-cardano-api-codec/src/Plutus/Cardano/Api/: Codec.hs
plutus-cardano-api-codec/src/Plutus/Cardano/Api/Codec/: Address.hs  Base.hs  Crypto.hs  Script.hs  Time.hs  Value.hs
plutus-cardano-api-codec/src/Plutus/Cardano/Api/Types/Time/: Millisecond.hs
(+254 files in other folders)
