cabal-version: 3.0
name:          hydra-auction
version:       0.1.0
synopsis:      Auction in hydra head
homepage:      https://github.com/mlabs-haskell/hydra-auction
author:        MLabs
maintainer:    giovanni@mlabs.city
data-files:
  data/credentials/*.sk
  data/credentials/*.vk
  data/hydra-keys/*.sk
  data/hydra-keys/*.vk
  README.md

source-repository head
  type:     git
  location: https://github.com/mlabs-haskell/hydra-auction

flag dev
  description:
    Defer errors from the PlutusTx plugin, which break HLS and Haddock. Also disable Werror.

  default:     True
  manual:      False

common common-lang
  -- Options from MLabs styleguide

  ghc-options:
    -Wall -Wcompat -Wincomplete-record-updates
    -Wincomplete-uni-patterns -Wredundant-constraints
    -Wmissing-export-lists -Wmissing-deriving-strategies

  if !flag(dev)
    ghc-options: -Werror

  if flag(dev)
    ghc-options: -fplugin-opt PlutusTx.Plugin:defer-errors

  -- Options for Plutus Tx compilations
  -- (some are enabled additionaly in individual modules)

  ghc-options:
    -fobject-code -fno-ignore-interface-pragmas
    -fno-omit-interface-pragmas

  build-depends:
    , aeson
    , async
    , base                     ^>=4.14
    , base16-bytestring
    , bytestring
    , cardano-api
    , cardano-ledger-core
    , containers
    , contra-tracer
    , exceptions
    , extra
    , filepath
    , hydra-cardano-api
    , hydra-cluster
    , hydra-node
    , hydra-plutus
    , hydra-prelude
    , lens
    , lens-aeson
    , mtl
    , plutus-ledger-api
    , plutus-tx-plugin
    , prettyprinter
    , record-dot-preprocessor
    , record-hasfield
    , stm
    , text
    , time
    , time-machine
    , transformers
    , websockets

  default-extensions:
    NoImplicitPrelude
    BangPatterns
    BinaryLiterals
    ConstraintKinds
    DataKinds
    DeriveAnyClass
    DeriveFunctor
    DeriveGeneric
    DeriveTraversable
    DerivingStrategies
    DerivingVia
    DuplicateRecordFields
    EmptyCase
    FlexibleContexts
    FlexibleInstances
    GADTs
    GeneralizedNewtypeDeriving
    HexFloatLiterals
    ImportQualifiedPost
    InstanceSigs
    KindSignatures
    LambdaCase
    MultiParamTypeClasses
    NamedFieldPuns
    NumericUnderscores
    OverloadedStrings
    PatternSynonyms
    ScopedTypeVariables
    StandaloneDeriving
    TemplateHaskell
    TupleSections
    TypeApplications
    TypeFamilies
    TypeFamilyDependencies
    TypeOperators
    TypeSynonymInstances
    UndecidableInstances

  default-language:   Haskell2010

executable hydra-auction
  import:         common-lang
  main-is:        Main.hs
  other-modules:
    CLI.Actions
    CLI.Config
    CLI.Parsers
    CLI.Parsers.TxIn
    CLI.Prettyprinter
    CLI.Watch

  build-depends:
    , aeson
    , ansi-terminal
    , array
    , base
    , bech32
    , bech32-th
    , bytestring
    , cardano-api                     >=1.35.4
    , cardano-binary                  ==1.5.0
    , cardano-crypto-class            ==2.0.0
    , cardano-ledger-alonzo
    , cardano-ledger-alonzo-test
    , cardano-ledger-babbage
    , cardano-ledger-babbage-test
    , cardano-ledger-byron
    , cardano-ledger-core
    , cardano-ledger-shelley
    , cardano-ledger-shelley-ma
    , cardano-ledger-shelley-ma-test
    , cardano-ledger-shelley-test
    , cardano-prelude
    , cardano-slotting                ==0.1.0.0
    , cborg
    , containers
    , data-default
    , directory
    , haskeline
    , hydra-auction
    , hydra-auction-utils
    , hydra-cardano-api
    , hydra-plutus
    , hydra-test-utils
    , natural-numbers
    , optparse-applicative
    , ouroboros-network               ==0.1.0.1
    , parsec
    , plutus-tx
    , QuickCheck
    , serialise
    , strict-containers               ==0.1.0.0
    , text

  hs-source-dirs: app
  ghc-options:    -threaded -rtsopts

executable hydra-auction-delegate
  import:         common-lang
  main-is:        Main.hs
  other-modules:  HydraAuction.Delegate.Server
  hs-source-dirs: delegate-app
  ghc-options:    -threaded -rtsopts
  build-depends:
    , hydra-auction
    , hydra-auction-utils
    , plutus-ledger-api

library
  import:          common-lang
  exposed-modules:
    HydraAuction.Addresses
    HydraAuction.Delegate
    HydraAuction.Delegate.Interface
    HydraAuction.Hydra.Interface
    HydraAuction.Hydra.Monad
    HydraAuction.Hydra.Runner
    HydraAuction.OnChain
    HydraAuction.OnChain.Common
    HydraAuction.OnChain.TestNFT
    HydraAuction.Runner
    HydraAuction.Runner.Time
    HydraAuction.Tx.Common
    HydraAuction.Tx.Escrow
    HydraAuction.Tx.StandingBid
    HydraAuction.Tx.TermsConfig
    HydraAuction.Tx.TestNFT
    HydraAuction.Types
    Paths_hydra_auction

  other-modules:
    HydraAuction.OnChain.Escrow
    HydraAuction.OnChain.StandingBid
    HydraAuction.OnChain.StateToken
    HydraAuction.Runner.Tracer

  build-depends:
    , cardano-api
    , directory
    , hydra-auction-utils
    , hydra-cardano-api
    , hydra-cluster
    , hydra-node
    , hydra-plutus
    , hydra-prelude
    , hydra-test-utils
    , natural-numbers
    , plutus-tx
    , time

  hs-source-dirs:  src

library hydra-auction-utils
  import:          common-lang
  hs-source-dirs:  src-utils
  exposed-modules:
    HydraAuctionUtils.BundledData
    HydraAuctionUtils.Extras.CardanoApi
    HydraAuctionUtils.Extras.Plutus
    HydraAuctionUtils.Extras.PlutusOrphans
    HydraAuctionUtils.Fixture
    HydraAuctionUtils.Monads
    HydraAuctionUtils.Tracing
    HydraAuctionUtils.Tx.AutoCreateTx
    HydraAuctionUtils.Tx.Utxo
    Paths_hydra_auction

  build-depends:
    , hydra-plutus
    , plutus-tx

test-suite hydra-auction-test
  import:         common-lang
  type:           exitcode-stdio-1.0
  main-is:        Spec.hs
  other-modules:
    EndToEnd.Hydra
    EndToEnd.Ledger
    EndToEnd.Utils
    Unit.Common

  build-depends:
    , aeson
    , bytestring
    , cardano-api
    , containers
    , directory
    , hydra-auction
    , hydra-auction-utils
    , hydra-cardano-api
    , hydra-cluster
    , hydra-node
    , hydra-prelude
    , hydra-test-utils
    , plutus-cbor
    , plutus-tx
    , plutus-tx-plugin
    , QuickCheck
    , tasty
    , tasty-hspec
    , tasty-hunit
    , text

  hs-source-dirs: test
  ghc-options:    -threaded -rtsopts
