cabal-version: 3.0
name:          hydra-auction
version:       0.1.0
synopsis:      Auction in hydra head
homepage:      https://github.com/mlabs-haskell/hydra-auction
author:        MLabs
maintainer:    giovanni@mlabs.city
data-files:
  data/credentials/*.sk
  data/credentials/*.vk
  data/devnet/byron-delegate.key
  data/devnet/byron-delegation.cert
  data/devnet/cardano-node.json
  data/devnet/genesis-alonzo.json
  data/devnet/genesis-byron.json
  data/devnet/genesis-shelley.json
  data/devnet/kes.skey
  data/devnet/opcert.cert
  data/devnet/vrf.skey
  data/hydra-keys/*.sk
  data/hydra-keys/*.vk
  data/protocol-parameters.json
  README.md

source-repository head
  type:     git
  location: https://github.com/mlabs-haskell/hydra-auction

flag dev
  description:
    Defer errors from the PlutusTx plugin, which break HLS and Haddock. Also disable Werror.

  default:     True
  manual:      False

common common-lang
  -- Options from MLabs styleguide

  ghc-options:
    -Wall -Wcompat -Wincomplete-record-updates
    -Wincomplete-uni-patterns -Wredundant-constraints
    -Wmissing-export-lists -Wmissing-deriving-strategies
    -Wno-redundant-constraints

  if !flag(dev)
    ghc-options: -Werror

  if flag(dev)
    ghc-options: -fplugin-opt PlutusTx.Plugin:defer-errors

  -- Options for Plutus Tx compilations
  -- (some are enabled additionaly in individual modules)

  ghc-options:
    -fobject-code -fno-ignore-interface-pragmas
    -fno-omit-interface-pragmas

  build-depends:
    , aeson
    , async
    , base
    , base16-bytestring
    , bytestring
    , cardano-api
    , cardano-ledger-core
    , containers
    , contra-tracer
    , ed25519
    , exceptions
    , extra
    , filepath
    , hydra-cardano-api
    , hydra-cluster
    , hydra-node
    , hydra-plutus
    , hydra-prelude
    , lens
    , lens-aeson
    , mtl
    , plutus-ledger-api
    , plutus-tx-plugin
    , prettyprinter
    , record-dot-preprocessor
    , record-hasfield
    , stm
    , text
    , time
    , time-machine
    , transformers
    , unix
    , websockets

  default-extensions:
    NoImplicitPrelude
    BangPatterns
    BinaryLiterals
    ConstraintKinds
    DataKinds
    DeriveAnyClass
    DeriveFunctor
    DeriveGeneric
    DeriveTraversable
    DerivingStrategies
    DerivingVia
    DuplicateRecordFields
    EmptyCase
    FlexibleContexts
    FlexibleInstances
    GADTs
    GeneralizedNewtypeDeriving
    HexFloatLiterals
    ImportQualifiedPost
    InstanceSigs
    KindSignatures
    LambdaCase
    MultiParamTypeClasses
    NamedFieldPuns
    NumericUnderscores
    OverloadedStrings
    PatternSynonyms
    ScopedTypeVariables
    StandaloneDeriving
    TemplateHaskell
    TupleSections
    TypeApplications
    TypeFamilies
    TypeFamilyDependencies
    TypeOperators
    TypeSynonymInstances
    UndecidableInstances

  if flag(dev)
    default-extensions: PartialTypeSignatures

  default-language:   Haskell2010

executable hydra-auction
  import:         common-lang
  main-is:        Main.hs
  other-modules:
    CLI.Actions
    CLI.Config
    CLI.Parsers
    CLI.Printing
    CLI.Types
    CLI.Watch

  build-depends:
    , aeson
    , ansi-terminal
    , array
    , base
    , bech32
    , bech32-th
    , bytestring
    , cardano-api
    , cardano-binary
    , cardano-crypto-class
    , cardano-ledger-alonzo
    , cardano-ledger-alonzo-test
    , cardano-ledger-babbage
    , cardano-ledger-babbage-test
    , cardano-ledger-byron
    , cardano-ledger-core
    , cardano-ledger-shelley
    , cardano-ledger-shelley-ma
    , cardano-ledger-shelley-ma-test
    , cardano-ledger-shelley-test
    , cardano-prelude
    , cardano-slotting
    , cborg
    , containers
    , data-default
    , directory
    , haskeline
    , hydra-auction
    , hydra-auction-utils
    , hydra-cardano-api
    , hydra-plutus
    , hydra-test-utils
    , optparse-applicative
    , ouroboros-network
    , plutus-tx
    , QuickCheck
    , serialise
    , strict-containers               >=0.1.0.0
    , text

  hs-source-dirs: app
  ghc-options:    -threaded -rtsopts

executable hydra-auction-delegate
  import:         common-lang
  main-is:        Main.hs
  other-modules:
    DelegateServer.Parsers
    HydraAuction.Delegate.Server

  hs-source-dirs: delegate-app
  ghc-options:    -threaded -rtsopts
  build-depends:
    , hydra-auction
    , hydra-auction-utils
    , optparse-applicative

library
  import:          common-lang
  exposed-modules:
    HydraAuction.Addresses
    HydraAuction.Delegate
    HydraAuction.Delegate.Interface
    HydraAuction.HydraHacks
    HydraAuction.OnChain
    HydraAuction.OnChain.Common
    HydraAuction.OnChain.TestNFT
    HydraAuction.Tx.Common
    HydraAuction.Tx.Deposit
    HydraAuction.Tx.Escrow
    HydraAuction.Tx.FeeEscrow
    HydraAuction.Tx.StandingBid
    HydraAuction.Tx.TermsConfig
    HydraAuction.Tx.TestNFT
    HydraAuction.Types
    Paths_hydra_auction

  other-modules:
    HydraAuction.OnChain.Deposit
    HydraAuction.OnChain.Escrow
    HydraAuction.OnChain.FeeEscrow
    HydraAuction.OnChain.StandingBid
    HydraAuction.OnChain.StateToken

  build-depends:
    , cardano-api
    , directory
    , hydra-auction-utils
    , hydra-cardano-api
    , hydra-cluster
    , hydra-node
    , hydra-plutus
    , hydra-prelude
    , hydra-test-utils
    , plutus-tx
    , time
    , typed-process

  hs-source-dirs:  src

library hydra-auction-utils
  import:          common-lang
  hs-source-dirs:  src-utils
  exposed-modules:
    HydraAuctionUtils.BundledData
    HydraAuctionUtils.Composite.Runner
    HydraAuctionUtils.Extras.CardanoApi
    HydraAuctionUtils.Extras.Plutus
    HydraAuctionUtils.Extras.PlutusOrphans
    HydraAuctionUtils.Fixture
    HydraAuctionUtils.Hydra.Interface
    HydraAuctionUtils.Hydra.Monad
    HydraAuctionUtils.Hydra.Runner
    HydraAuctionUtils.L1.Runner
    HydraAuctionUtils.L1.Runner.Time
    HydraAuctionUtils.Monads
    HydraAuctionUtils.Monads.Actors
    HydraAuctionUtils.Network
    HydraAuctionUtils.Parsers
    HydraAuctionUtils.Parsers.TxIn
    HydraAuctionUtils.Plutus
    HydraAuctionUtils.PrettyPrinting
    HydraAuctionUtils.Server.ClientId
    HydraAuctionUtils.Server.Websockets
    HydraAuctionUtils.Time
    HydraAuctionUtils.Tracing
    HydraAuctionUtils.Tx.AutoCreateTx
    HydraAuctionUtils.Tx.Build
    HydraAuctionUtils.Tx.Utxo
    HydraAuctionUtils.Types.Natural
    Paths_hydra_auction

  other-modules:   HydraAuctionUtils.L1.Runner.Tracer
  build-depends:
    , HostAndPort
    , HUnit
    , hydra-plutus
    , hydra-test-utils
    , optparse-applicative
    , parsec
    , plutus-tx
    , protolude

test-suite hydra-auction-test
  import:         common-lang
  type:           exitcode-stdio-1.0
  main-is:        Spec.hs
  other-modules:
    CLI.Actions
    CLI.Config
    CLI.Printing
    CLI.Types
    EndToEnd.CLI
    EndToEnd.HydraUtils
    EndToEnd.Ledger.Auction
    EndToEnd.Ledger.BidDeposit
    EndToEnd.Ledger.L1Steps
    EndToEnd.Ledger.L2
    EndToEnd.Ledger.L2Steps
    EndToEnd.Utils
    Unit.Common

  build-depends:
    , aeson
    , bytestring
    , cardano-api
    , containers
    , directory
    , hydra-auction
    , hydra-auction-utils
    , hydra-cardano-api
    , hydra-cluster
    , hydra-node
    , hydra-prelude
    , hydra-test-utils
    , plutus-cbor
    , plutus-tx
    , plutus-tx-plugin
    , process
    , QuickCheck
    , tasty
    , tasty-hspec
    , tasty-hunit
    , text

  hs-source-dirs: test app
  ghc-options:    -threaded -rtsopts
