cabal-version: 3.0
name:          hydra-auction
version:       0.1.0
synopsis:      Auction in hydra head
homepage:      https://github.com/mlabs-haskell/hydra-auction
author:        MLabs
maintainer:    giovanni@mlabs.city
data-files:
  data/credentials/*.sk
  data/credentials/*.vk
  data/devnet/byron-delegate.key
  data/devnet/byron-delegation.cert
  data/devnet/cardano-node.json
  data/devnet/genesis-alonzo.json
  data/devnet/genesis-byron.json
  data/devnet/genesis-shelley.json
  data/devnet/kes.skey
  data/devnet/opcert.cert
  data/devnet/vrf.skey
  data/hydra-keys/*.sk
  data/hydra-keys/*.vk
  data/protocol-parameters.json
  README.md

source-repository head
  type:     git
  location: https://github.com/mlabs-haskell/hydra-auction

flag dev
  description:
    Defer errors from the PlutusTx plugin, which break HLS and Haddock. Also disable Werror.

  default:     True
  manual:      False

common common-lang
  -- Options from MLabs styleguide

  ghc-options:
    -Wall -Wcompat -Wincomplete-record-updates
    -Wincomplete-uni-patterns -Wredundant-constraints
    -Wmissing-export-lists -Wmissing-deriving-strategies
    -Wno-redundant-constraints

  if !flag(dev)
    ghc-options: -Werror

  build-depends:
    , aeson
    , base
    , base16-bytestring
    , lens
    , lens-aeson
    , mtl
    , plutus-ledger-api
    , record-dot-preprocessor
    , record-hasfield
    , transformers

  default-extensions:
    NoImplicitPrelude
    BangPatterns
    BinaryLiterals
    ConstraintKinds
    DataKinds
    DeriveAnyClass
    DeriveFunctor
    DeriveGeneric
    DeriveTraversable
    DerivingStrategies
    DerivingVia
    DuplicateRecordFields
    EmptyCase
    FlexibleContexts
    FlexibleInstances
    FunctionalDependencies
    GADTs
    GeneralizedNewtypeDeriving
    HexFloatLiterals
    ImportQualifiedPost
    InstanceSigs
    KindSignatures
    LambdaCase
    MultiParamTypeClasses
    NamedFieldPuns
    NumericUnderscores
    OverloadedStrings
    PatternSynonyms
    QuantifiedConstraints
    RankNTypes
    ScopedTypeVariables
    StandaloneDeriving
    StrictData
    TemplateHaskell
    TupleSections
    TypeApplications
    TypeFamilies
    TypeFamilyDependencies
    TypeOperators
    TypeSynonymInstances
    UndecidableInstances

  if flag(dev)
    default-extensions: PartialTypeSignatures

  default-language:   Haskell2010

common common-offchain
  import:        common-lang
  build-depends:
    , async
    , bytestring
    , cardano-api
    , cardano-ledger-core
    , containers
    , contra-tracer
    , ed25519
    , exceptions
    , extra
    , filepath
    , hydra-cardano-api
    , hydra-cluster
    , hydra-node
    , hydra-plutus
    , hydra-prelude
    , prettyprinter
    , stm
    , text
    , time
    , time-machine
    , unix
    , websockets

common common-executable
  import:      common-offchain
  ghc-options: -threaded -rtsopts

executable hydra-auction
  import:         common-executable
  main-is:        Main.hs
  other-modules:
    CLI.Actions
    CLI.Config
    CLI.Parsers
    CLI.Printing
    CLI.Types
    CLI.Watch

  build-depends:
    , ansi-terminal
    , array
    , base
    , bytestring
    , cardano-api
    , cardano-binary
    , cardano-crypto-class
    , cardano-prelude
    , containers
    , directory
    , haskeline
    , hydra-auction
    , hydra-auction-onchain
    , hydra-auction-utils
    , hydra-cardano-api
    , hydra-plutus
    , hydra-test-utils
    , optparse-applicative

  hs-source-dirs: app

executable hydra-auction-delegate
  import:         common-executable
  main-is:        Main.hs
  other-modules:
    DelegateServer.Parsers
    HydraAuction.Delegate.Server

  hs-source-dirs: delegate-app
  build-depends:
    , hydra-auction
    , hydra-auction-onchain
    , hydra-auction-utils
    , optparse-applicative

executable hydra-auction-platform
  import:         common-executable
  main-is:        Main.hs
  hs-source-dirs: platform-app
  build-depends:
    , hydra-auction
    , hydra-auction-utils

library hydra-auction-onchain
  import:          common-lang

  if flag(dev)
    ghc-options: -fplugin-opt PlutusTx.Plugin:defer-errors

  -- Options for Plutus Tx compilations
  -- (some are enabled additionaly in individual modules)

  ghc-options:
    -fobject-code -fno-ignore-interface-pragmas
    -fno-omit-interface-pragmas -fno-specialize
    -fno-unbox-small-strict-fields -fno-unbox-strict-fields

  exposed-modules:
    HydraAuction.Addresses
    HydraAuction.OnChain
    HydraAuction.OnChain.Common
    HydraAuction.OnChain.Deposit
    HydraAuction.OnChain.Escrow
    HydraAuction.OnChain.FeeEscrow
    HydraAuction.OnChain.StandingBid
    HydraAuction.OnChain.StateToken
    HydraAuction.OnChain.TestNFT
    HydraAuction.Types

  build-depends:
    , hydra-auction-utils
    , hydra-cardano-api
    , hydra-cluster
    , hydra-node
    , hydra-plutus
    , hydra-prelude
    , hydra-test-utils
    , plutus-tx
    , plutus-tx-plugin

  hs-source-dirs:  src-onchain

library
  import:          common-offchain
  exposed-modules:
    HydraAuction.Delegate
    HydraAuction.Delegate.Interface
    HydraAuction.HydraHacks
    HydraAuction.Platform.Interface
    HydraAuction.Platform.Storage
    HydraAuction.Tx.Common
    HydraAuction.Tx.Deposit
    HydraAuction.Tx.Escrow
    HydraAuction.Tx.FeeEscrow
    HydraAuction.Tx.StandingBid
    HydraAuction.Tx.TermsConfig
    HydraAuction.Tx.TestNFT
    Paths_hydra_auction

  build-depends:
    , cardano-api
    , directory
    , hydra-auction-onchain
    , hydra-auction-utils
    , hydra-cardano-api
    , hydra-cluster
    , hydra-node
    , hydra-plutus
    , hydra-prelude
    , hydra-test-utils
    , plutus-tx
    , time
    , typed-process

  hs-source-dirs:  src

library hydra-auction-utils
  import:          common-offchain
  hs-source-dirs:  src-utils
  exposed-modules:
    HydraAuctionUtils.BundledData
    HydraAuctionUtils.Composite.Runner
    HydraAuctionUtils.Extras.CardanoApi
    HydraAuctionUtils.Extras.Plutus
    HydraAuctionUtils.Extras.PlutusOrphans
    HydraAuctionUtils.Fixture
    HydraAuctionUtils.Hydra.Interface
    HydraAuctionUtils.Hydra.Monad
    HydraAuctionUtils.Hydra.Runner
    HydraAuctionUtils.L1.Runner
    HydraAuctionUtils.Monads
    HydraAuctionUtils.Monads.Actors
    HydraAuctionUtils.Network
    HydraAuctionUtils.Parsers
    HydraAuctionUtils.Parsers.TxIn
    HydraAuctionUtils.Plutus
    HydraAuctionUtils.Prelude
    HydraAuctionUtils.PrettyPrinting
    HydraAuctionUtils.Server.Client
    HydraAuctionUtils.Server.ClientId
    HydraAuctionUtils.Server.Protocol
    HydraAuctionUtils.Server.Websockets
    HydraAuctionUtils.Time
    HydraAuctionUtils.Tracing
    HydraAuctionUtils.Tx.AutoCreateTx
    HydraAuctionUtils.Tx.Build
    HydraAuctionUtils.Tx.Common
    HydraAuctionUtils.Tx.Utxo
    HydraAuctionUtils.Types.Natural
    Paths_hydra_auction
    PlutusTx.Deriving

  other-modules:   HydraAuctionUtils.L1.Runner.Tracer
  build-depends:
    , cardano-binary
    , HostAndPort
    , HUnit
    , hydra-plutus
    , hydra-test-utils
    , monad-control
    , optparse-applicative
    , parsec
    , plutus-tx
    , protolude
    , template-haskell
    , transformers-base
    , utf8-string

test-suite hydra-auction-test
  import:         common-executable
  type:           exitcode-stdio-1.0
  main-is:        Spec.hs
  other-modules:
    CLI.Actions
    CLI.Config
    CLI.Printing
    CLI.Types
    EndToEnd.CLI
    EndToEnd.HydraUtils
    EndToEnd.Ledger.Auction
    EndToEnd.Ledger.BidDeposit
    EndToEnd.Ledger.L1Steps
    EndToEnd.Ledger.L2
    EndToEnd.Ledger.L2Steps
    EndToEnd.Utils
    Unit.Common

  build-depends:
    , bytestring
    , cardano-api
    , cardano-binary
    , containers
    , directory
    , hydra-auction
    , hydra-auction-onchain
    , hydra-auction-utils
    , hydra-cardano-api
    , hydra-cluster
    , hydra-node
    , hydra-prelude
    , hydra-test-utils
    , plutus-cbor
    , plutus-tx
    , process
    , QuickCheck
    , silently
    , tasty
    , tasty-hspec
    , tasty-hunit

  -- FIXME: separate Frontend CLI lib
  hs-source-dirs: test app
