cabal-version: 3.0
name:          hydra-auction-offchain
version:       0.1.0
synopsis:      Hydra Auction Off-chain Code
homepage:      https://github.com/mlabs-haskell/hydra-auction
author:        MLabs
maintainer:    info@mlabs.city
license:       Apache-2.0
license-files:
  LICENSE
  NOTICE

source-repository head
  type:     git
  location: https://github.com/mlabs-haskell/hydra-auction

flag dev
  description:
    Disable -Werror.

  default:     True
  manual:      False

common common-config
  default-language:   Haskell2010

  -- Options from MLabs styleguide
  default-extensions:
    NoImplicitPrelude
    BangPatterns
    BinaryLiterals
    ConstraintKinds
    DataKinds
    DeriveAnyClass
    DeriveFunctor
    DeriveGeneric
    DeriveTraversable
    DerivingStrategies
    DerivingVia
    DuplicateRecordFields
    EmptyCase
    FlexibleContexts
    FlexibleInstances
    FunctionalDependencies
    GADTs
    GeneralizedNewtypeDeriving
    HexFloatLiterals
    ImportQualifiedPost
    InstanceSigs
    KindSignatures
    LambdaCase
    MultiParamTypeClasses
    NamedFieldPuns
    NumericUnderscores
    OverloadedStrings
    PatternSynonyms
    QuantifiedConstraints
    RankNTypes
    RecordWildCards
    ScopedTypeVariables
    StandaloneDeriving
    StrictData
    TemplateHaskell
    TupleSections
    TypeApplications
    TypeFamilies
    TypeFamilyDependencies
    TypeOperators
    TypeSynonymInstances
    UndecidableInstances

  ghc-options:
    -Wall
    -Wcompat
    -Wincomplete-record-updates
    -Wincomplete-uni-patterns
    -Wmissing-deriving-strategies
    -Wmissing-export-lists 
    -Wredundant-constraints
    --
    -Wno-redundant-constraints

  if !flag(dev)
    ghc-options:
      -Werror

  if flag(dev)
    default-extensions: PartialTypeSignatures

library
  import:          common-config
  hs-source-dirs:  src
  exposed-modules:
    HydraAuction.Offchain.Lib.Codec.Onchain
    HydraAuction.Offchain.Lib.Crypto
    HydraAuction.Offchain.Lib.Time
    HydraAuction.Offchain.Lib.Validation
    HydraAuction.Offchain.Types.AuctionEscrowState
    HydraAuction.Offchain.Types.AuctionInfo
    HydraAuction.Offchain.Types.AuctionTerms
    HydraAuction.Offchain.Types.BidderInfo
    HydraAuction.Offchain.Types.BidTerms
    HydraAuction.Offchain.Types.DelegateInfo
    HydraAuction.Offchain.Types.StandingBidState

  build-depends:
    -- , aeson
    , base
    , bytestring
    , cardano-api             >=8.20.0 && <8.21
    -- , cardano-binary          >=1.7.0  && <1.8
    , cardano-crypto-class    >=2.1.1  && <2.2
    -- , cardano-ledger-allegra  >=1.2.1  && <1.3
    , cardano-ledger-alonzo   >=1.4    && <1.5
    -- , cardano-ledger-api      >=1.5    && <1.6
    -- , cardano-ledger-babbage  >=1.4.2  && <1.5
    -- , cardano-ledger-binary   >=1.1.1  && <1.2
    -- , cardano-ledger-byron    >=1.0.0  && <1.1
    , cardano-ledger-core     >=1.6    && <1.7
    , cardano-ledger-mary     >=1.3.1  && <1.4
    -- , cardano-ledger-shelley  >=1.6    && <1.7
    -- , containers
    , hydra-auction-error
    , hydra-auction-onchain
    , plutus-ledger-api
    , plutus-tx
    , text
    , time
    , validation

  ghc-options:
