cabal-version: 3.0
name:          hydra-auction-onchain
version:       0.1.0
synopsis:      Hydra Auction On-chain Code
homepage:      https://github.com/mlabs-haskell/hydra-auction
author:        MLabs
maintainer:    info@mlabs.city
license:       Apache-2.0
license-files:
  LICENSE
  NOTICE

source-repository head
  type:     git
  location: https://github.com/mlabs-haskell/hydra-auction

flag dev
  description:
    Defer errors from the PlutusTx plugin, which break HLS and Haddock. Also disable -Werror.

  default:     True
  manual:      False

common common-config
  default-language:   Haskell2010

  -- Options from MLabs styleguide
  default-extensions:
    NoImplicitPrelude
    BangPatterns
    BinaryLiterals
    ConstraintKinds
    DataKinds
    DeriveAnyClass
    DeriveFunctor
    DeriveGeneric
    DeriveTraversable
    DerivingStrategies
    DerivingVia
    DuplicateRecordFields
    EmptyCase
    FlexibleContexts
    FlexibleInstances
    FunctionalDependencies
    GADTs
    GeneralizedNewtypeDeriving
    HexFloatLiterals
    ImportQualifiedPost
    InstanceSigs
    KindSignatures
    LambdaCase
    MultiParamTypeClasses
    NamedFieldPuns
    NumericUnderscores
    OverloadedStrings
    PatternSynonyms
    QuantifiedConstraints
    RankNTypes
    RecordWildCards
    ScopedTypeVariables
    StandaloneDeriving
    StrictData
    TemplateHaskell
    TupleSections
    TypeApplications
    TypeFamilies
    TypeFamilyDependencies
    TypeOperators
    TypeSynonymInstances
    UndecidableInstances

  ghc-options:
    -Wall
    -Wcompat
    -Wincomplete-record-updates
    -Wincomplete-uni-patterns
    -Wmissing-deriving-strategies
    -Wmissing-export-lists
    -Wredundant-constraints
    --
    -Wno-redundant-constraints

  if !flag(dev)
    ghc-options:
      -Werror

  if flag(dev)
    default-extensions: PartialTypeSignatures

library
  import:          common-config
  hs-source-dirs:  src
  exposed-modules:
    HydraAuction.Onchain.Lib.Error
    HydraAuction.Onchain.Lib.ScriptContext
    HydraAuction.Onchain.Lib.Scripts
    HydraAuction.Onchain.Lib.Serialise
    HydraAuction.Onchain.MintingPolicies.Auction
    HydraAuction.Onchain.Types.AuctionInfo
    HydraAuction.Onchain.Types.AuctionState
    HydraAuction.Onchain.Types.AuctionTerms
    HydraAuction.Onchain.Types.BidderInfo
    HydraAuction.Onchain.Types.BidTerms
    HydraAuction.Onchain.Types.DelegateInfo
    HydraAuction.Onchain.Types.Scripts
    HydraAuction.Onchain.Validators.AuctionMetadata
    HydraAuction.Onchain.Validators.FeeEscrow
    HydraAuction.Onchain.Validators.StandingBid

  build-depends:
    -- , aeson
    , base
    -- , base16-bytestring
    -- , bytestring
    , cardano-api             >=8.20.0 && <8.21
    -- , cardano-binary          >=1.7.0  && <1.8
    -- , cardano-crypto-class    >=2.1.1  && <2.2
    -- , cardano-ledger-allegra  >=1.2.1  && <1.3
    -- , cardano-ledger-alonzo   >=1.4    && <1.5
    -- , cardano-ledger-api      >=1.5    && <1.6
    -- , cardano-ledger-babbage  >=1.4.2  && <1.5
    -- , cardano-ledger-binary   >=1.1.1  && <1.2
    -- , cardano-ledger-byron    >=1.0.0  && <1.1
    -- , cardano-ledger-core     >=1.6    && <1.7
    -- , cardano-ledger-mary     >=1.3.1  && <1.4
    -- , cardano-ledger-shelley  >=1.6    && <1.7
    -- , containers
    -- , lens
    -- , lens-aeson
    -- , mtl
    , plutus-core
    , hydra-auction-error
    , plutus-ledger-api
    , plutus-tx
    , plutus-tx-plugin
    -- , record-dot-preprocessor
    -- , record-hasfield
    , template-haskell
    , text
    -- , time
    -- , transformers
    -- , validation

  ghc-options:
    -fno-ignore-interface-pragmas
    -fno-omit-interface-pragmas
    -fno-specialize
    -fno-unbox-small-strict-fields
    -fno-unbox-strict-fields
    -fobject-code
    -fplugin-opt PlutusTx.Plugin:target-version=1.0.0

  if flag(dev)
    ghc-options:
      -fplugin-opt PlutusTx.Plugin:defer-errors

